tests/snapshots/examples_fixtures/type_system__failing__55_strict_any_return_rejected.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/55_strict_any_return_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Any with Int.

  --> examples/type_system/failing/55_strict_any_return_rejected.flx:2:5
  |
2 |     x
  |     ^
  |     - expected Any, found Int
  |     - return expression type is known at compile time

Help:
  return expression type does not match the declared return type
== stdout ==
<not executed>
